<resources>
    <string name="app_name">Challenge Nisum</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="retry">Retry</string>
    <string name="no_results_found">No results found</string>
    <string name="connection_error">Connection error</string>

    <string name="err_default_msg">Something went wrong! Please try again later.</string>
    <string name="err_no_internet">No Internet Connection!</string>
    <string name="err_timeout">Connection Timeout</string>

    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="s_atk">S-ATK</string>
    <string name="s_def">S-DEF</string>
    <string name="spd">SPD</string>
    <string name="exp">EXP</string>

    <string name="attack">attack</string>
    <string name="defense">defense</string>
    <string name="special_attack">special-attack</string>
    <string name="special_defense">special-defense</string>
    <string name="speed">speed</string>

    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="base_stats">Base stats</string>
    <string name="find_me">Find me in</string>
    <string name="evolution">Evolution</string>

    <string name="search_hint">Search</string>



</resources>